--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -7,11 +7,11 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-hover">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>Address</th>
+        <th>Client</th>
+        <th>Contacts</th>
         <th>Active</th>
         <th></th>
         <th></th>
@@ -22,10 +22,14 @@
     <tbody>
       <% @clients.each do |client| %>
         <tr>
-          <td><%= client.name %></td>
-          <td><%= client.address %></td>
+          <td>
+            <%= client.name %>
+            <br/>
+            <%= simple_format(client.address) %>
+          </td>
+          <td></td>
           <td><%= client.active %></td>
-          <td><%= link_to '+ Contact', new_client_contact_path(client) %></td>
+          <td><%= link_to 'Add Contact', new_client_contact_path(client) %></td>
           <td><%= link_to 'Edit', edit_client_path(client) %></td>
           <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
