--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="page-header">
-  <%= link_to clients_path, :class => 'btn btn-default' do %>
+  <%= link_to projects_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <%= link_to @client, :class => 'btn btn-primary' do %>
+  <%= link_to @project, :class => 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-info-sign"></span>
     Show
   <% end %>
-  <h1><%= @client.name %></h1>
+  <h1><%= @project.name %></h1>
 </div>
 
 <%= render 'form' %>
