--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -15,7 +15,7 @@
   <div class="form-group">
     <%= f.label :client, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
-      <%= f.select :client_id, options_from_collection_for_select(Client.all, :id, :name), {:prompt => "Select or create a client..."} %>
+      <%= f.select :client_id_or_name, options_from_collection_for_select(Client.all, :id, :name), {:prompt => "Select or create a client..."} %>
     </div>
   </div>
   <div class="form-group">
