Add Entries and whole new daily dashboard.

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -43,3 +43,27 @@ section {
   @extend .row;
   margin-top: 20px;
   }
+
+// time entries
+.entry-save {
+  width: 100%;
+}
+
+.table.entries-table > tbody > tr > td {
+  padding-left: 29px;
+}
+
+.new-entry {
+  margin-bottom: 1em;
+}
+
+.dashboard {
+  text-align: center;
+}
+
+// set a max-width for horizontal fluid layout and make it centered 
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  max-width: 750px;
+}
