--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -8,67 +8,17 @@
     <div class="col-sm-10">
     </div>
   </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <h4>Billable</h4>
-      <h1>8</h1>
-      <b>$880</b>
-      <p>Month: $8,800</p>
-    </div>
-    <div class="col-sm-4">
-      <h4>Bootstrapping</h4>
-      <h1>4</h1>
-      <b>Streak: 2 days!</b>
-      <p>Month: 20 hours</p>
-    </div>
-    <div class="col-sm-4">
-      <h4>Other</h4>
-      <h1>2</h1>
-      <b>&nbsp;</b>
-      <p>Month: 40 hours</p>
-    </div>
-  </div>
+  <%= render 'daily_dashboard' %>
 </div>
 
-<div class="container">
-<%= form_for(@entry, remote: true, :html => { :class => "" }) do |f| %>
-  <div class="row new-entry">
-    <div class="form-group col-sm-2">
-      <%= f.text_field :minutes, :class => "form-control", :placeholder => "time" %>
-    </div>
-    <div class="form-group col-sm-4">
-      <%= f.select :project_id, options_from_collection_for_select(Project.all, :id, :name), {:tabindex => "-1", :prompt => "Select or create a project..."} %>
-    </div>
-    <div class="form-group col-sm-5">
-      <%= f.text_field :description, :class => "form-control", :placeholder => "description / #tags" %>
-    </div>
-    <div class="form-group col-sm-1">
-      <%= f.submit :class => "btn btn-primary entry-save", :value => ">" %>
-    </div>
-  </div>
-  <div class="row new-entry">
-    <div class="form-group col-sm-12">
-      <%= f.text_field :journal, :class => "form-control", :placeholder => "journal notes (optional)" %>
-    </div>
-  </div>
-<% end %>
+<div class="container" id="form-container">
+  <%= render :partial => 'inline_form' %>
 </div>
 
 <div class="container row">
 
   <h5>Today</h5>
 
-  <div class="table-responsive">
-    <table class="table table-hover entries-table">
-      <tbody id="entries-rows">
-        <% @entries.each do |entry| %>
-          <%= render entry %>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-
-  <h5>Jan 22 6/2/4</h5>
   <div class="table-responsive">
     <table class="table table-hover entries-table">
       <tbody id="entries-rows">
