--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,6 +1,9 @@
 <tr>
-  <td class="col-sm-2"><%= entry.minutes %></td>
+  <td class="col-sm-2"><b><%= number_with_precision(entry.minutes / 60.0, precision: 2)  %></b></td>
   <td class="col-sm-4"><%= entry.project.name unless entry.project.blank? %></td>
   <td class="col-sm-4"><%= entry.description %></td>
-  <td class="col-sm-2"><%= link_to 'Edit', edit_entry_path(entry) %></td>
+  <td class="col-sm-2">
+  	<%= link_to 'Edit', edit_entry_path(entry) %>
+  	<%= link_to 'Destroy', entry, method: :delete, data: { confirm: 'Are you sure?' } %>
+  	</td>
 </tr>
