--- a/app/views/entries/_inline_form.html.erb
+++ b/app/views/entries/_inline_form.html.erb
@@ -4,13 +4,13 @@
       <% if @entry.new_record? %>
         <%= f.text_field :minutes, :class => "form-control", :placeholder => "time" %>
       <% else %>
-        <span id='clocking'>
-          <%= image_tag "clock-spinner.gif", :id => 'clock-icon' %>
+        <span id='clocking' data-starting-minutes='<%= @entry.elapsed_time %>' %>
+          <%= image_tag "clock-spinner.gif", :id => 'clock-icon' %><span id="runner"></span>
         </span>
       <% end %>
     </div>
     <div class="form-group col-sm-4">
-      <%= f.select :project_id_or_name, options_from_collection_for_select(Project.all, :id, :name), {:tabindex => "-1", :prompt => "Select or create a project..."} %>
+      <%= f.select :project_id_or_name, options_from_collection_for_select(Project.all, :id, :name, :selected => @entry.project_id_or_name ), {:prompt => "Select or create a project..."} %>
     </div>
     <div class="form-group col-sm-4">
       <%= f.text_field :description, :class => "form-control", :placeholder => "description / #tags" %>
