--- a/app/views/entries/_inline_form.html.erb
+++ b/app/views/entries/_inline_form.html.erb
@@ -25,7 +25,7 @@
   </div>
   <div class="row new-entry">
     <div class="form-group col-sm-12">
-      <%= f.text_field :journal, :class => "form-control", :placeholder => "journal notes (optional)" %>
+      <%= f.text_field :journal, :class => "form-control", :placeholder => "timeline notes (optional)" %>
     </div>
   </div>
 <% end %>
