--- a/app/views/entries/create.js.erb
+++ b/app/views/entries/create.js.erb
@@ -5,6 +5,7 @@
 <% else %>
   $("#form-container").html("<%= escape_javascript(render :partial => 'inline_form') %>");
   $("#daily-dashboard").replaceWith("<%= escape_javascript(render :partial => 'daily_dashboard') %>");
+  $("#ul-timeline").html("<%= escape_javascript(render :partial => 'timeline_entries') %>");
   $("<%= escape_javascript(render @created_entry) %>").prependTo("#entries-rows");
   window.reset_page()
 <% end %>
