--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -5,12 +5,16 @@
     </td>
   </tr>
 <% end %>
-<tr>
+<tr class="entry">
   <td class="col-sm-2"><b><%= number_with_precision(entry.minutes / 60.0, precision: 2)  %></b></td>
   <td class="col-sm-4"><%= entry.project.name unless entry.project.blank? %></td>
   <td class="col-sm-4"><%= entry.description %></td>
   <td class="col-sm-2">
-  	<%= link_to 'Edit', edit_entry_path(entry) %>
-  	<%= link_to 'Destroy', entry, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <%= link_to edit_entry_path(entry), :class => 'action edit' do %>
+      <i class="glyphicon glyphicon-pencil edit-icon"></i>
+    <% end %>
+    <%= link_to entry, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'action delete' do %>
+      <i class="glyphicon glyphicon-remove delete-icon"></i>
+    <% end %>
   </td>
 </tr>
