--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -51,45 +51,7 @@
     <div class="page-header">
         <h1 id="timeline">Timeline</h1>
     </div>
-    <ul class="timeline">
-      <% @entries_with_journal_text.in_groups_of(2).each do |entry1, entry2| %>
-        <li>
-          <div class="timeline-badge info">
-            <i class="glyphicon glyphicon-pencil"></i>
-          </div>
-          <div class="timeline-panel">
-            <div class="timeline-body">
-              <p><%= entry1.journal %></p>
-            </div>
-            <div class="timeline-heading">
-              <p>
-                <small class="text-muted"><i class="glyphicon glyphicon-time"></i>
-                  <%= entry1.date.strftime("%b %e") %>
-                </small>
-              </p>
-            </div>
-          </div>
-        </li>
-
-        <% if entry2 %>
-          <li class="timeline-inverted">
-            <div class="timeline-badge info">
-              <i class="glyphicon glyphicon-pencil"></i>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-body">
-                <p><%= entry2.journal %></p>
-              </div>
-              <div class="timeline-heading">
-                <p>
-                  <small class="text-muted"><i class="glyphicon glyphicon-time"></i>
-                    <%= entry2.date.strftime("%b %e") %>
-                  </small>
-                </p>
-              </div>
-            </div>
-          </li>
-        <% end %>
-      <% end %>
+    <ul class="timeline" id="ul-timeline">
+      <%= render :partial => 'timeline_entries' %>
     </ul>
 </div>
