css tweak to fit in live timer when > 59:59

--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -22,9 +22,9 @@
 
 #runner {
   float: left;
-  margin-left: .5em;
-  margin-top: 3px;
-  font-size: 150%;
+  margin-left: 8px;
+  margin-top: 7px;
+  font-size: 115%;
   font-weight: bold;
 }
 
