--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>app2014</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -19,13 +19,14 @@
 <body>
   <%= render :partial => 'layouts/navigation' %>
   <div class="container">
+    <div class="row">
+      <div class=""
     <% flash.each do |name, msg| %>
       <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable" do %>
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
         <%= msg %>
       <% end %>
     <% end %>
-
     <%= yield %>
   </div>
 </body>
