--- a/app/views/entries/_daily_dashboard.html.erb
+++ b/app/views/entries/_daily_dashboard.html.erb
@@ -1,18 +1,18 @@
 <div class="row" id="daily-dashboard">
-  <div class="col-sm-4">
+  <div class="col-xs-4">
     <h4>Billable</h4>
     <h1><%= number_with_precision(Entry.billable.today.sum(:minutes)/60.0, precision: 2) %></h1>
     <p>hours</p>
     <b><%= number_to_currency(Entry.billable.today.sum(:minutes)/60.0 * 110) %></b>
   </div>
-  <div class="col-sm-4">
+  <div class="col-xs-4">
     <h4>Bootstrapping</h4>
     <h1><%= number_with_precision(Entry.bootstrapping.today.sum(:minutes)/60.0, precision: 2) %></h1>
     <p>hours</p>
     <%= number_to_currency(Entry.bootstrapping.today.sum(:minutes)/60.0 * 110) %><br/>
     <b>Streak: <%= pluralize Entry.streak_days, 'day' %>!</b>
   </div>
-  <div class="col-sm-4">
+  <div class="col-xs-4">
     <h4>Other</h4>
     <h1><%= number_with_precision(Entry.other.today.sum(:minutes)/60.0, precision: 2) %></h1>
     <p>hours</p>
