--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -6,10 +6,10 @@
   </tr>
 <% end %>
 <tr class="entry">
-  <td class="col-sm-2"><b><%= number_with_precision(entry.minutes / 60.0, precision: 2)  %></b></td>
-  <td class="col-sm-4"><%= entry.project.name unless entry.project.blank? %></td>
-  <td class="col-sm-4"><%= entry.description %></td>
-  <td class="col-sm-2">
+  <td class="col-xs-2"><b><%= number_with_precision(entry.minutes / 60.0, precision: 2)  %></b></td>
+  <td class="col-xs-4"><%= entry.project.name unless entry.project.blank? %></td>
+  <td class="col-xs-4"><%= entry.description %></td>
+  <td class="col-xs-2">
     <%= link_to edit_entry_path(entry), :class => 'action edit' do %>
       <i class="glyphicon glyphicon-pencil edit-icon"></i>
     <% end %>
