--- a/app/views/entries/_inline_form.html.erb
+++ b/app/views/entries/_inline_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@entry, remote: true, :html => { :class => "" }) do |f| %>
   <div class="row new-entry">
-    <div class="form-group col-sm-2">
+    <div class="form-group col-xs-2">
       <% if @entry.new_record? %>
         <%= f.text_field :minutes, :class => "form-control", :placeholder => "time" %>
       <% else %>
@@ -9,13 +9,13 @@
         </span>
       <% end %>
     </div>
-    <div class="form-group col-sm-4">
+    <div class="form-group col-xs-4">
       <%= f.select :project_id_or_name, options_from_collection_for_select(Project.all, :id, :name, :selected => @entry.project_id_or_name ), {:prompt => "Select or create a project..."} %>
     </div>
-    <div class="form-group col-sm-4">
+    <div class="form-group col-xs-4">
       <%= f.text_field :description, :class => "form-control", :placeholder => "description / #tags" %>
     </div>
-    <div class="form-group col-sm-2">
+    <div class="form-group col-xs-2">
       <% if @entry.new_record? %>
         <%= f.submit :class => "btn btn-primary entry-save", :value => "Save" %>
       <% else %>
@@ -24,7 +24,7 @@
     </div>
   </div>
   <div class="row new-entry">
-    <div class="form-group col-sm-12">
+    <div class="form-group col-xs-12">
       <%= f.text_field :journal, :class => "form-control", :placeholder => "timeline notes (optional)" %>
     </div>
   </div>
