--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,21 +1,17 @@
-<div class="container">
-
-<div class="row container dashboard thumbnail">
+<div class="row">
   <div class="row">
-    <div class="col-sm-1" style="color: #9DA0A4; margin-left: 8px;">
+    <div class="col-xs-1" style="color: #9DA0A4; margin-left: 8px;">
     today
     </div>
-    <div class="col-sm-10">
+    <div class="col-xs-11">
     </div>
   </div>
   <%= render 'daily_dashboard' %>
 </div>
 
-<div class="container" id="form-container">
-  <%= render :partial => 'inline_form' %>
-</div>
+<%= render :partial => 'inline_form' %>
 
-<div class="container row">
+<div class="row">
 
   <h5>Today</h5>
 
@@ -47,11 +43,9 @@
   </div>
 </div>
 
-<div class="container">
-    <div class="page-header">
-        <h1 id="timeline">Timeline</h1>
-    </div>
-    <ul class="timeline" id="ul-timeline">
-      <%= render :partial => 'timeline_entries' %>
-    </ul>
+<div class="page-header">
+    <h1 id="timeline">Timeline</h1>
 </div>
+<ul class="timeline" id="ul-timeline">
+  <%= render :partial => 'timeline_entries' %>
+</ul>
