Clean up grid layouts

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -44,13 +44,7 @@ section {
   margin-top: 20px;
   }
 
-// set a max-width for horizontal fluid layout and make it centered 
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 750px;
-}
-
+// navbar
 .navbar-inverse {
   text-shadow: 0 -1px 0 rgba(0,0,0,.15);
   background-color: #563d7c;
@@ -68,4 +62,9 @@ section {
 
 .navbar-nav {
   float: right;
+}
+
+.navbar-brand {
+  margin-left: 0;
+  padding-left: 0;
 }
