--- a/app/views/entries/_daily_dashboard.html.erb
+++ b/app/views/entries/_daily_dashboard.html.erb
@@ -1,22 +1,31 @@
-<div class="row" id="daily-dashboard">
-  <div class="col-xs-4">
-    <h4>Billable</h4>
-    <h1><%= number_with_precision(Entry.billable.today.sum(:minutes)/60.0, precision: 2) %></h1>
-    <p>hours</p>
-    <b><%= number_to_currency(Entry.billable.today.sum(:minutes)/60.0 * 110) %></b>
+<div class="row panel panel-default">
+  <div class="panel-heading">
+    <div class="btn-group panel-title">
+      <button type="button" class="btn btn-default">Today</button>
+      <button type="button" class="btn btn-default">Month</button>
+      <button type="button" class="btn btn-default">Year</button>
+    </div>
   </div>
-  <div class="col-xs-4">
-    <h4>Bootstrapping</h4>
-    <h1><%= number_with_precision(Entry.bootstrapping.today.sum(:minutes)/60.0, precision: 2) %></h1>
-    <p>hours</p>
-    <%= number_to_currency(Entry.bootstrapping.today.sum(:minutes)/60.0 * 110) %><br/>
-    <b>Streak: <%= pluralize Entry.streak_days, 'day' %>!</b>
-  </div>
-  <div class="col-xs-4">
-    <h4>Other</h4>
-    <h1><%= number_with_precision(Entry.other.today.sum(:minutes)/60.0, precision: 2) %></h1>
-    <p>hours</p>
-    <b><%= number_to_currency(Entry.other.today.sum(:minutes)/60.0 * 110) %></b>
-    <p>Month: $</p>
+  <div class="panel-body" id="daily-dashboard">
+    <div class="col-xs-4">
+      <h4>Billable</h4>
+      <h1><%= number_with_precision(Entry.billable.today.sum(:minutes)/60.0, precision: 2) %></h1>
+      <p>hours</p>
+      <b><%= number_to_currency(Entry.billable.today.sum(:minutes)/60.0 * 110) %></b>
+    </div>
+    <div class="col-xs-4">
+      <h4>Bootstrapping</h4>
+      <h1><%= number_with_precision(Entry.bootstrapping.today.sum(:minutes)/60.0, precision: 2) %></h1>
+      <p>hours</p>
+      <%= number_to_currency(Entry.bootstrapping.today.sum(:minutes)/60.0 * 110) %><br/>
+      <b>Streak: <%= pluralize Entry.streak_days, 'day' %>!</b>
+    </div>
+    <div class="col-xs-4">
+      <h4>Other</h4>
+      <h1><%= number_with_precision(Entry.other.today.sum(:minutes)/60.0, precision: 2) %></h1>
+      <p>hours</p>
+      <b><%= number_to_currency(Entry.other.today.sum(:minutes)/60.0 * 110) %></b>
+      <p>Month: $</p>
+    </div>
   </div>
 </div>
