--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,20 +1,39 @@
-<%# navigation styled for Bootstrap 3.0 %>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<header class="navbar navbar-inverse navbar-fixed-top" role="banner">
   <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= link_to 'Today', root_path, class: 'navbar-brand' %>
-      <%= link_to 'Pulse', root_path, class: 'navbar-brand' %>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <%= render 'layouts/navigation_links' %>
-      </ul>
+    <div class="row">
+      <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= link_to "Dashboard", root_path, :class => 'navbar-brand' %>
+      </div>
+      <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+        <ul class="nav navbar-nav">
+          <li>
+            <%= link_to "Goals", root_path %>
+          </li>
+          <li>
+            <%= link_to "Reports", root_path %>
+          </li>
+          <li>
+            <%= link_to "Pulse", root_path %>
+          </li>          
+          <li>
+            <%= link_to "Journal", root_path %>
+          </li>          
+          <li>
+            <%= link_to "Invoices", root_path %>
+          </li>          
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to "Changes", page_path("changes") %>
+          </li>
+        </ul>
+      </nav>
     </div>
   </div>
-</nav>
+</header>
