--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,16 @@
   <%= render :partial => 'layouts/navigation' %>
   <div class="container">
     <div class="row">
-      <div class=""
-    <% flash.each do |name, msg| %>
-      <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable" do %>
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <%= msg %>
+      <% flash.each do |name, msg| %>
+        <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable" do %>
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          <%= msg %>
+        <% end %>
       <% end %>
-    <% end %>
-    <%= yield %>
+    </div>
+    <div class="row">
+      <%= yield %>
+    </div>
   </div>
 </body>
 </html>
