--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Dashboard", root_path, :class => 'navbar-brand' %>
+        <%= link_to "Timesheets", root_path, :class => 'navbar-brand' %>
       </div>
       <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
@@ -16,19 +16,19 @@
             <%= link_to "Goals", root_path %>
           </li>
           <li>
-            <%= link_to "Reports", root_path %>
+            <%= link_to "Invoices", root_path %>
           </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
           <li>
             <%= link_to "Pulse", root_path %>
           </li>          
           <li>
-            <%= link_to "Journal", root_path %>
+            <%= link_to "Reports", root_path %>
           </li>          
           <li>
-            <%= link_to "Invoices", root_path %>
+            <%= link_to "Journal", root_path %>
           </li>          
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
           <li>
             <%= link_to "Changes", page_path("changes") %>
           </li>
