--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -13,8 +13,11 @@
     <%= link_to edit_entry_path(entry), :class => 'action edit' do %>
       <i class="glyphicon glyphicon-pencil edit-icon"></i>
     <% end %>
-    <%= link_to entry, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'action delete' do %>
+    <%= link_to entry, method: :delete, data: { confirm: 'Are you sure you want to DELETE this time entry?' }, :class => 'action delete' do %>
       <i class="glyphicon glyphicon-remove delete-icon"></i>
     <% end %>
-  </td>
+    <%= link_to restart_entry_path(entry), method: :put, :class => 'btn btn-success action restart btn-sm' do %>
+      <i class="glyphicon glyphicon-time"></i>
+      Start
+    <% end %>
 </tr>
