Timers can be restarted

--- a/app/views/entries/_daily_dashboard.html.erb
+++ b/app/views/entries/_daily_dashboard.html.erb
@@ -1,7 +1,7 @@
 <div class="row panel panel-default" id="daily-dashboard">
   <div class="panel-heading">
     <div class="btn-group panel-title">
-      <button type="button" class="btn btn-default active">Today</button>
+      <button type="button" class="btn btn-default active">Day</button>
       <button type="button" class="btn btn-default">Month</button>
       <button type="button" class="btn btn-default">Year</button>
     </div>
