--- a/app/views/pages/changes.html.erb
+++ b/app/views/pages/changes.html.erb
@@ -1,5 +1,6 @@
 <h1>Change History</h1>
 <h3 class="text-muted">January 2014</h3>
 <ul>
+	<li class="lead"><span class="text-muted">Feature</span> (Jan 27) Time entries can be restarted</li>
 	<li class="lead"><span class="text-muted">Update</span> (Jan 27) Add this change history page</li>
 </ul>
