Add streaks graph.

--- a/app/views/entries/_inline_form.html.erb
+++ b/app/views/entries/_inline_form.html.erb
@@ -26,7 +26,7 @@
     </div>
     <div class="row new-entry">
       <div class="form-group col-xs-12">
-        <%= f.text_field :journal, :class => "form-control", :placeholder => "timeline notes (optional)" %>
+        <%= f.text_field :journal, :class => "form-control", :placeholder => "journal / notes (optional)" %>
       </div>
     </div>
   <% end %>
