--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,7 +21,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <%= link_to "Pulse", root_path %>
+            <%= link_to "Pulse", graphs_path %>
           </li>          
           <li>
             <%= link_to "Journal", root_path %>
