--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -15,54 +15,5 @@
     </tr>
   </thead>
 
-  <tbody class="streak-days">
-    <tr>
-    	<% ((Date.today-21).beginning_of_week() .. (Date.today-21).end_of_week()).each do |date| %>
-      	<td>
-      		<% if any_entries_for_day?(date) %>
-      			<span class="glyphicon glyphicon-ok-circle <%= class_day_in_current_streak?(date) %> popoverable" style="font-size: 200%; margin-left: 5px;" data-trigger="hover" data-container="body" data-toggle="popover" data-placement="top" data-html="true" data-title="<%= date.to_s(:long) %>" data-content="Bootstrapping hours: <%= hours_for_day_bootstrapping(date) %><br/>Billable hours: <%= hours_for_day_billable(date) %>"></span>
-      		<% else %>
-      			&nbsp;
-      		<% end %>
-      	</td>
-      <% end %>
-    </tr>
-    <tr>
-    	<% ((Date.today-14).beginning_of_week() .. (Date.today-14).end_of_week()).each do |date| %>
-      	<td>
-      		<% if any_entries_for_day?(date) %>
-      			<span class="glyphicon glyphicon-ok-circle <%= class_day_in_current_streak?(date) %> popoverable" style="font-size: 200%; margin-left: 5px;" data-trigger="hover" data-container="body" data-toggle="popover" data-placement="top" data-html="true" data-title="<%= date.to_s(:long) %>" data-content="Bootstrapping hours: <%= hours_for_day_bootstrapping(date) %><br/>Billable hours: <%= hours_for_day_billable(date) %>"></span>
-      		<% else %>
-      			&nbsp;
-      		<% end %>
-      	</td>
-      <% end %>
-    </tr>
-    <tr>
-    	<% ((Date.today-7).beginning_of_week() .. (Date.today-7).end_of_week()).each do |date| %>
-      	<td>
-      		<% if any_entries_for_day?(date) %>
-      			<span class="glyphicon glyphicon-ok-circle <%= class_day_in_current_streak?(date) %> popoverable" style="font-size: 200%; margin-left: 5px;" data-trigger="hover" data-container="body" data-toggle="popover" data-placement="top" data-html="true" data-title="<%= date.to_s(:long) %>" data-content="Bootstrapping hours: <%= hours_for_day_bootstrapping(date) %><br/>Billable hours: <%= hours_for_day_billable(date) %>"></span>
-      		<% else %>
-      			&nbsp;
-      		<% end %>
-      	</td>
-      <% end %>
-    </tr>
-    <tr>
-    	<% (Date.today.beginning_of_week() .. Date.today).each do |date| %>
-      	<td>
-      		<% if any_entries_for_day?(date) %>
-      			<span class="glyphicon glyphicon-ok-circle <%= class_day_in_current_streak?(date) %> popoverable" style="font-size: 200%; margin-left: 5px;" data-trigger="hover" data-container="body" data-toggle="popover" data-placement="top" data-html="true" data-title="<%= date.to_s(:long) %>" data-content="Bootstrapping hours: <%= hours_for_day_bootstrapping(date) %><br/>Billable hours: <%= hours_for_day_billable(date) %>"></span>
-      		<% else %>
-      			&nbsp;
-      		<% end %>
-      	</td>
-      <% end %>
-    	<% (Date.today + 1 .. Date.today.end_of_week()).each do |date| %>
-      	<td>
-      	</td>
-      <% end %>
-    </tr>
-  </tbody>
+  <%= render :partial => 'streak' %>
 </table>
