--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,10 +8,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Timesheets", root_path, :class => 'navbar-brand' %>
+        <%= link_to "Dashboard", dashboard_path, :class => 'navbar-brand' %>
       </div>
       <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
+          <li>
+            <%= link_to "Timesheets", root_path %>
+          </li>
           <li>
             <%= link_to "Reports", root_path %>
           </li>
