Add Users, SignIn, SignOut, etc.

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -32,6 +32,7 @@
           <li>
             <%= link_to "Changes", page_path("changes") %>
           </li>
+          <%= render 'layouts/navigation_links' %>
         </ul>
       </nav>
     </div>
