Time entry at top of every screen

--- a/app/views/pages/changes.html.erb
+++ b/app/views/pages/changes.html.erb
@@ -1,7 +1,11 @@
 <h1>Change History</h1>
+<h3 class="text-muted">February 2014</h3>
+<ul>
+	<li class="lead"><span class="text-muted">Feature</span> (Feb 3) Time Entry from Any Screen</li>
+	<li class="lead"><span class="text-muted">Feature</span> (Feb 1) Add SignUp/SignIn/SignOut</li>
+</ul>
 <h3 class="text-muted">January 2014</h3>
 <ul>
-	<li class="lead"><span class="text-muted">Feature</span> (Feb 1) Add SignUp/SignIn/SignOut</li>
 	<li class="lead"><span class="text-muted">Feature</span> (Jan 31) Add dashboard / home page</li>
 	<li class="lead"><span class="text-muted">Feature</span> (Jan 30) Add streak graph</li>
 	<li class="lead"><span class="text-muted">Feature</span> (Jan 27) Time entries can be restarted</li>
