--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
       <% end %>
     </div>
 
+    <%= render "layouts/time_entry" unless controller_name == 'entries' %>
+
     <%= yield %>
 
   </div>
