--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,8 +26,8 @@
           <li>
             <%= link_to "Pulse", graphs_path %>
           </li>          
-          <li>
-            <%= link_to "Journal", root_path %>
+          <li class="active">
+            <%= link_to "Notes", notes_path %>
           </li>          
           <li>
             <%= link_to "Changes", page_path("changes") %>
