--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <%= javascript_include_tag "https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js", "https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js" %>
   <![endif]-->
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <script src="//tinymce.cachefly.net/4.0/tinymce.min.js"></script>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -28,7 +29,7 @@
       <% end %>
     </div>
 
-    <%= render "layouts/time_entry" unless controller_name == 'entries' %>
+    <%= render "layouts/time_entry" unless ['entries', 'sessions', 'registrations'].include?(controller_name) %>
 
     <%= yield %>
 
