--- a/app/views/pages/changes.html.erb
+++ b/app/views/pages/changes.html.erb
@@ -1,6 +1,7 @@
 <h1>Change History</h1>
 <h3 class="text-muted">February 2014</h3>
 <ul>
+	<li class="lead"><span class="text-muted">Feature</span> (Feb 5) Notes</li>
 	<li class="lead"><span class="text-muted">Feature</span> (Feb 3) Time Entry from Any Screen</li>
 	<li class="lead"><span class="text-muted">Feature</span> (Feb 1) Add SignUp/SignIn/SignOut</li>
 </ul>
