--- a/app/views/entries/_entry.html.erb
+++ b/app/views/entries/_entry.html.erb
@@ -1,12 +1,14 @@
-<% if entry.is_first_for_day? && !entry.is_first_of_all? %>
-  <tr class="first-for-day">
-    <td colspan="5">
-      <%= entry.date.strftime("%b %e") %>
-    </td>
-  </tr>
-<% end %>
-<tr class="entry">
-  <td class="col-xs-2"><b><%= number_with_precision(entry.minutes / 60.0, precision: 2)  %></b></td>
+<tr class="entry <%= 'running' if entry.started_at %>">
+  <td class="col-xs-2">
+    <% if entry.started_at %>
+      <span id='clocking' data-starting-minutes='<%= entry.elapsed_time %>' %>
+        <span id="runner"></span>
+        <%= image_tag "clock-spinner.gif", :id => 'clock-icon' %>
+      </span>
+    <% else %>
+      <b><%= number_with_precision((entry.minutes || 0) / 60.0, precision: 2)  %></b>
+    <% end %>
+  </td>
   <td class="col-xs-4"><%= entry.project.name unless entry.project.blank? %></td>
   <td class="col-xs-4"><%= entry.description %></td>
   <td class="col-xs-2">
@@ -16,8 +18,16 @@
     <%= link_to entry, method: :delete, data: { confirm: 'Are you sure you want to DELETE this time entry?' }, :class => 'action delete' do %>
       <i class="glyphicon glyphicon-remove delete-icon"></i>
     <% end %>
-    <%= link_to restart_entry_path(entry), method: :put, :class => 'btn btn-success action restart btn-sm' do %>
-      <i class="glyphicon glyphicon-time"></i>
-      Start
+    <% if entry.started_at %>
+      <%= link_to stop_entry_path(entry), method: :put, remote: true, :class => 'btn btn-success action restart btn-sm' do %>
+        <i class="glyphicon glyphicon-time"></i>
+        Stop
+      <% end %>
+    <% else %>
+      <%= link_to start_entry_path(entry), method: :put, remote: true, :class => 'btn btn-success action restart btn-sm' do %>
+        <i class="glyphicon glyphicon-time"></i>
+        Start
+      <% end %>
     <% end %>
+  </td>
 </tr>
