--- a/app/assets/stylesheets/entries.css.scss
+++ b/app/assets/stylesheets/entries.css.scss
@@ -28,7 +28,6 @@
   float: left;
   margin-left: 8px;
   margin-top: 7px;
-  font-size: 115%;
   font-weight: bold;
 }
 
@@ -51,15 +50,15 @@ a.edit:hover {
   margin-top: 8px;
 }
 
-.action,
-.btn.action {
-  display: none;
-}
-
 .restart {
   float: right;
 }
 
 tr:hover .action {
   display: inline;
+}
+
+.running {
+  background-color: #e7e7e7;
+  border-bottom: 1px solid #333;
 }
