--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,5 +1,3 @@
-<%= render 'daily_dashboard' %>
-
 <%= render :partial => 'inline_form' %>
 
 <div class="row">
@@ -10,35 +8,9 @@
     <div class="table-responsive">
       <table class="table table-hover entries-table">
         <tbody id="entries-rows">
-          <% @entries_today.each do |entry| %>
-            <%= render entry %>
-          <% end %>
+          <%= render "entries" %>
         </tbody>
       </table>
     </div>
-
-    <h5>
-      Yesterday
-      <%= number_with_precision(Entry.billable.yesterday.sum(:minutes)/60.0, precision: 0) %> /
-      <%= number_with_precision(Entry.bootstrapping.yesterday.sum(:minutes)/60.0, precision: 0) %> /
-      <%= number_with_precision(Entry.other.yesterday.sum(:minutes)/60.0, precision: 0) %>
-    </h5>
-
-    <div class="table-responsive">
-      <table class="table table-hover entries-table">
-        <tbody id="entries-rows">
-          <% @entries_yesterday.each do |entry| %>
-            <%= render entry %>
-          <% end %>
-        </tbody>
-      </table>
-    </div>
-
-    <div class="page-header">
-        <h1 id="timeline">Timeline</h1>
-    </div>
-    <ul class="timeline" id="ul-timeline">
-      <%= render :partial => 'timeline_entries' %>
-    </ul>
   </div>
 </div>
