--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,9 +24,15 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
+            <%= link_to "Clients", clients_path %>
+          </li>          
+          <li>
+            <%= link_to "Projects", projects_path %>
+          </li>          
+          <li>
             <%= link_to "Pulse", graphs_path %>
           </li>          
-          <li class="active">
+          <li>
             <%= link_to "Notes", notes_path %>
           </li>          
           <li>
