--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,46 +1,20 @@
-<header class="navbar navbar-inverse navbar-fixed-top" role="banner">
-  <div class="container">
-    <div class="row">
-      <div class="navbar-header">
-        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <%= link_to "Dashboard", dashboard_path, :class => 'navbar-brand' %>
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Time</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <nav class="collapse navbar-collapse" role="navigation">
+            <ul class="nav navbar-nav navbar-right">
+              <%= render 'layouts/navigation_links' %>
+            </ul>
+          </nav>
+        </div>
       </div>
-      <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
-        <ul class="nav navbar-nav">
-          <li>
-            <%= link_to "Timesheets", root_path %>
-          </li>
-          <li>
-            <%= link_to "Reports", root_path %>
-          </li>
-          <li>
-            <%= link_to "Invoices", root_path %>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <%= link_to "Clients", clients_path %>
-          </li>          
-          <li>
-            <%= link_to "Projects", projects_path %>
-          </li>          
-          <li>
-            <%= link_to "Pulse", graphs_path %>
-          </li>          
-          <li>
-            <%= link_to "Notes", notes_path %>
-          </li>          
-          <li>
-            <%= link_to "Changes", page_path("changes") %>
-          </li>
-          <%= render 'layouts/navigation_links' %>
-        </ul>
-      </nav>
     </div>
-  </div>
-</header>
