--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,43 @@
 </head>
 <body>
   <%= render :partial => 'layouts/navigation' %>
-  <div class="container">
+
+  <div class="container-fluid">
     <div class="row">
-      <% flash.each do |name, msg| %>
-        <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable" do %>
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <%= msg %>
-        <% end %>
-      <% end %>
+      <div class="col-sm-3 col-md-2 sidebar">
+        <ul class="nav nav-sidebar">
+          <li><a href="#">Dashboard</a></li>
+          <li class="active"><a href="#">Timesheets</a></li>
+          <li><a href="#">Clients</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Invoices</a></li>
+        </ul>
+        <ul class="nav nav-sidebar">
+          <li><a href="">Reports</a></li>
+          <li><a href="">Pulse</a></li>
+          <li><a href="">Notes</a></li>
+          <li><a href="">Changes</a></li>
+        </ul>
+      </div>
+
+      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+        <div class="row">
+          <% flash.each do |name, msg| %>
+            <%= content_tag :div, :class => "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable" do %>
+              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+              <%= msg %>
+            <% end %>
+          <% end %>
+        </div>
+
+        <%= render "layouts/time_entry" unless ['entries', 'sessions', 'registrations'].include?(controller_name) %>
+
+        <%= yield %>
+
+      </div>
     </div>
-
-    <%= render "layouts/time_entry" unless ['entries', 'sessions', 'registrations'].include?(controller_name) %>
-
-    <%= yield %>
-
   </div>
+</div>
+
 </body>
 </html>
